# TheHaloMod

./: .dockerignore  .env.template  .gitignore  .pre-commit-config.yaml  Dockerfile  LICENSE  README.md  change_prod_settings.py  compose-dev.yml  compose-prod.yml  db  docker-compose.yml  entrypoint  entrypoint.sh  fabfile.py  manage.py  pyproject.toml  requirements.txt
TheHaloMod/: settings.py  urls.py  wsgi.py
TheHaloMod/settings/: base.py  local.py  production.py  test.py
env/: local  production  test
halomod_app/: form_utils.py  forms.py  urls.py  utils.py  views.py
halomod_app/static/halomod_app/js/: HideShowRules.js
halomod_app/templatetags/: halomod_version.py  hmf_version.py
nginx/: default.conf
templates/: 404.html  500.html  about.html  acknowledgments.html  base.html  calculator_form.html  downforwork.html  email_form.html  email_sent.html  help.html  home.html  image_page.html  navbar.html  resources.html  user_error_form.html
